Explain spigot algorithm

--- a/context.org
+++ b/context.org
@@ -2,4 +2,5 @@
 #+author: Daan van Berkel
 
 The [[http://en.wikipedia.org/wiki/Bailey%25E2%2580%2593Borwein%25E2%2580%2593Plouffe_formula][Bailey-Borwein-Plouff algorithm]] is an algorithm to calculate a
-single digits of π, without calculating any of the preceding digits.
+single digits of π, without calculating any of the preceding
+digits. It is an example of a [[http://en.wikipedia.org/wiki/Spigot_algorithm][spigot algorithm]].
