--- a/context.org
+++ b/context.org
@@ -3,4 +3,9 @@
 
 The [[http://en.wikipedia.org/wiki/Bailey%25E2%2580%2593Borwein%25E2%2580%2593Plouffe_formula][Bailey-Borwein-Plouff algorithm]] is an algorithm to calculate a
 single digits of π, without calculating any of the preceding
-digits. It is an example of a [[http://en.wikipedia.org/wiki/Spigot_algorithm][spigot algorithm]].
+digits. It is an example of a [[http://en.wikipedia.org/wiki/Spigot_algorithm][spigot algorithm]]. It is based on the
+following formula for π
+
+\[
+\pi = \sum_{k=0}^{\infty}\frac{1}{16^{k}}\left(\frac{4}{8k+1} - \frac{2}{8k+4} - \frac{1}{8k+5} - \frac{1}{8k+6}\right)
+\]
