--- a/context.org
+++ b/context.org
@@ -1,7 +1,7 @@
-#+title: Bailey-Borwein-Plouff
+#+title: Bailey-Borwein-Plouffe
 #+author: Daan van Berkel
 
-The [[http://en.wikipedia.org/wiki/Bailey%25E2%2580%2593Borwein%25E2%2580%2593Plouffe_formula][Bailey-Borwein-Plouff algorithm]] is an algorithm to calculate a
+The [[http://en.wikipedia.org/wiki/Bailey%25E2%2580%2593Borwein%25E2%2580%2593Plouffe_formula][Bailey-Borwein-Plouffe algorithm]] is an algorithm to calculate a
 single digits of π, without calculating any of the preceding
 digits. It is an example of a [[http://en.wikipedia.org/wiki/Spigot_algorithm][spigot algorithm]]. It is based on the
 following formula for π
